objects/AppointmentInvitation.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Used by Data Packs to identify and update records.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Field Service Lightning (FSL)</fullName>
                    <label>Salesforce Field Service (SFS)</label>
                </value>
                <value>
                    <fullName>Lightning Scheduler (LS)</fullName>
                </value>
                <value>
                    <fullName>Service Cloud</fullName>
                </value>
                <value>
                    <fullName>Workforce Engagement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_AppointmentInvitations</fullName>
        <filterScope>Everything</filterScope>
        <label>All Appointment Invitations</label>
    </listViews>
    <listViews>
        <fullName>All_AppointmentInvitations</fullName>
        <filterScope>Everything</filterScope>
        <label>All Appointment Invitations</label>
    </listViews>
    <listViews>
        <fullName>My_AppointmentInvitations</fullName>
        <filterScope>Mine</filterScope>
        <label>My Appointment Invitations</label>
    </listViews>
    <listViews>
        <fullName>My_AppointmentInvitations</fullName>
        <filterScope>Mine</filterScope>
        <label>My Appointment Invitations</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>